cleaned up dir structure

--- a/course-viewer/author/author-list.component.html
+++ b/course-viewer/author/author-list.component.html
@@ -1,7 +1,7 @@
 <h3>AUTHOR LIST</h3>
 <hr />
 <div ng-if="vm.authors == null">
-    NO AUTHORS
+    Loading...
 </div>
 <div ng-if="vm.authors != null">
     <div class="row">
