--- a/course-viewer/course/course-list.component.html
+++ b/course-viewer/course/course-list.component.html
@@ -1,7 +1,7 @@
 <h3>COURSE LIST</h3>
 <hr />
 <div ng-if="vm.courses == null">
-    NO COURSES
+    Loading...
 </div>
 <div ng-if="vm.courses != null">
     <div class="row">
